# fastapi_with_openai_api

./: .env.example  Pipfile  README.md  main.py  pyproject.toml
apps/: __init__.py
apps/blog/: __init__.py  route.py
core/: __init__.py  configuration.py  helper.py  middlewares.py  response_message.py  route.py
static/templates/: index.html
